# Guitar_Multi_Effects

./: .gitignore  AudioIO.cpp  AudioIO.h  CMakeLists.txt  Delay.cpp  Delay.h  Distortion.cpp  Distortion.h  Effect.h  EffectChain.cpp  EffectChain.h  main.cpp
